fix(product): image wrapper has fixed position only when the page is visible

--- a/css/templates/lune/pages/_product.css
+++ b/css/templates/lune/pages/_product.css
@@ -52,7 +52,7 @@
   z-index: 3;
 }
 
-.lune .hero__title__wrapper {
+.lune .hero__title-wrapper {
   margin-bottom: -1.9em;
 
   min-height: 238px;
@@ -65,7 +65,7 @@
     padding: 0;
   }
 
-  .lune .hero__title__wrapper {
+  .lune .hero__title-wrapper {
     display: flex;
   }
 
@@ -79,7 +79,7 @@
 }
 
 @media (--breakpoint-mt) {
-  .lune .hero__title__wrapper {
+  .lune .hero__title-wrapper {
     margin-bottom: -1em;
   }
 }
@@ -90,7 +90,7 @@
 
   }
 
-  .lune .hero__image__wrapper {
+  .lune-page--product:target .hero__image-wrapper {
     position: fixed;
     top: 50vh;
 
